# BetterChain

./: CMakeLists.txt  Doxyfile  README.md  betterchain.doxygen.in  build.sh  circle.yml  genesis.json  testnet.md
contracts/: CMakeLists.txt
contracts/asserter/: asserter.cpp  asserter.hpp
contracts/bancor/: bancor.cpp  bancor.hpp  converter.hpp
contracts/betterchain/: betterchain.cpp
contracts/betterchain.system/: CMakeLists.txt  README.md  betterchain.system.cpp  betterchain.system.hpp
contracts/betterchainlib/: account.hpp  asset.hpp  betterchain.hpp  crypto.h  datastream.hpp  fixedpoint.hpp  math.h  print.h  real.hpp  reflect.hpp  singleton.hpp  string.h  system.h  token.hpp  transaction.hpp  types.h  types.hpp  utility.hpp  varint.hpp  vector.hpp
contracts/betterchainlib/preprocessor/: assert_msg.hpp  empty.hpp  enum_params.hpp  enum_params_with_defaults.hpp  expr_if.hpp  facilities.hpp  if.hpp  limits.hpp  list.hpp  logical.hpp  repeat.hpp  repeat_3rd.hpp  repeat_from_to.hpp  repeat_from_to_3rd.hpp  repetition.hpp  seq.hpp  slot.hpp  stringize.hpp  tuple.hpp  while.hpp  wstringize.hpp
contracts/betterchainlib/preprocessor/arithmetic/: div.hpp  inc.hpp  mul.hpp
contracts/betterchainlib/preprocessor/array/: elem.hpp  pop_back.hpp  pop_front.hpp  push_front.hpp  remove.hpp
contracts/betterchainlib/preprocessor/comparison/: greater_equal.hpp  less.hpp
contracts/betterchainlib/preprocessor/control/: deduce_d.hpp  iif.hpp  while.hpp
contracts/betterchainlib/preprocessor/debug/: assert.hpp  error.hpp
contracts/betterchainlib/preprocessor/detail/: auto_rec.hpp  is_unary.hpp  split.hpp
contracts/betterchainlib/preprocessor/facilities/: apply.hpp  expand.hpp  is_empty.hpp  is_empty_variadic.hpp
contracts/betterchainlib/preprocessor/iteration/: local.hpp
contracts/betterchainlib/preprocessor/list/: adt.hpp  at.hpp  fold_left.hpp  for_each.hpp  for_each_product.hpp  to_seq.hpp  transform.hpp
contracts/betterchainlib/preprocessor/logical/: and.hpp  compl.hpp  not.hpp  xor.hpp
contracts/betterchainlib/preprocessor/punctuation/: is_begin_parens.hpp  paren_if.hpp
contracts/betterchainlib/preprocessor/repetition/: deduce_r.hpp  enum.hpp  enum_binary_params.hpp  enum_params_with_a_default.hpp  enum_shifted_binary_params.hpp  enum_trailing_binary_params.hpp  for.hpp  repeat.hpp  repeat_from_to.hpp
contracts/betterchainlib/preprocessor/seq/: filter.hpp  first_n.hpp  fold_left.hpp  for_each.hpp  pop_back.hpp  pop_front.hpp  reverse.hpp  seq.hpp  size.hpp  transform.hpp
contracts/betterchainlib/preprocessor/slot/: slot.hpp
contracts/betterchainlib/preprocessor/tuple/: elem.hpp  enum.hpp  pop_back.hpp  rem.hpp  to_array.hpp  to_list.hpp
contracts/betterchainlib/preprocessor/variadic/: size.hpp  to_array.hpp
contracts/currency/: currency.cpp  currency.hpp
contracts/dice/: README.md  dice.cpp  dice.hpp
contracts/exchange/: exchange.abi  exchange.cpp  exchange.hpp
contracts/infinite/: infinite.cpp  infinite.hpp
contracts/lib/: account.h  action.h  action.hpp  chain.h  contracts.dox  db.h  db.hpp  dispatcher.hpp  generic_currency.hpp  mainpage.md  math.hpp  memory.h  memory.hpp  native_currency.hpp  preprocessor.hpp  print.hpp  rpc.dox  serialize.hpp  string.hpp  table.hpp  transaction.h
contracts/lib/preprocessor/: arithmetic.hpp  array.hpp  cat.hpp  comma.hpp  comma_if.hpp  comparison.hpp  control.hpp  debug.hpp  dec.hpp  enum.hpp  enum_params_with_a_default.hpp  enum_shifted.hpp  enum_shifted_params.hpp  expand.hpp  for.hpp  identity.hpp  inc.hpp  iterate.hpp  iteration.hpp  library.hpp  max.hpp  min.hpp  punctuation.hpp  repeat_2nd.hpp  repeat_from_to_2nd.hpp  selection.hpp  variadic.hpp
contracts/lib/preprocessor/arithmetic/: add.hpp  dec.hpp  mod.hpp  sub.hpp
contracts/lib/preprocessor/array/: data.hpp  enum.hpp  insert.hpp  push_back.hpp  replace.hpp  reverse.hpp  size.hpp  to_list.hpp  to_seq.hpp  to_tuple.hpp
contracts/lib/preprocessor/comparison/: equal.hpp  greater.hpp  less_equal.hpp  not_equal.hpp
contracts/lib/preprocessor/control/: expr_if.hpp  expr_iif.hpp  if.hpp
contracts/lib/preprocessor/debug/: line.hpp
contracts/lib/preprocessor/detail/: check.hpp  is_binary.hpp  is_nullary.hpp
contracts/lib/preprocessor/facilities/: empty.hpp  identity.hpp  is_1.hpp  is_empty_or_1.hpp  overload.hpp
contracts/lib/preprocessor/iteration/: iterate.hpp  self.hpp
contracts/lib/preprocessor/list/: append.hpp  cat.hpp  enum.hpp  filter.hpp  first_n.hpp  fold_right.hpp  for_each_i.hpp  rest_n.hpp  reverse.hpp  size.hpp  to_array.hpp  to_tuple.hpp
contracts/lib/preprocessor/logical/: bitand.hpp  bitnor.hpp  bitor.hpp  bitxor.hpp  bool.hpp  nor.hpp  or.hpp
contracts/lib/preprocessor/punctuation/: comma_if.hpp  remove_parens.hpp
contracts/lib/preprocessor/repetition/: deduce_z.hpp  enum_params.hpp  enum_params_with_defaults.hpp  enum_shifted.hpp  enum_shifted_params.hpp  enum_trailing.hpp  enum_trailing_params.hpp
contracts/lib/preprocessor/selection/: max.hpp  min.hpp
contracts/lib/preprocessor/seq/: cat.hpp  elem.hpp  enum.hpp  fold_right.hpp  (+11 more)
contracts/proxy/: proxy.cpp  proxy.hpp
contracts/simpledb/: simpledb.cpp  simpledb.gen.hpp  simpledb.hpp
contracts/skeleton/: skeleton.cpp  skeleton.hpp
contracts/social/: social.cpp
contracts/storage/: storage.abi  storage.cpp  storage.hpp
contracts/test_api/: test_account.cpp  test_action.cpp  test_api.cpp  test_api.hpp  test_chain.cpp  test_crypto.cpp  test_db.cpp  test_fixedpoint.cpp  test_math.cpp  test_print.cpp  test_real.cpp  test_string.cpp  test_transaction.cpp  test_types.cpp
contracts/tic_tac_toe/: tic_tac_toe.cpp  tic_tac_toe.hpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/testing/: CMakeLists.txt  tester.cpp
libraries/utilities/: CMakeLists.txt  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
plugins/wallet_plugin/: CMakeLists.txt  wallet.cpp  wallet_manager.cpp  wallet_plugin.cpp
programs/debug_node/: CMakeLists.txt  main.cpp
(+1576 files in other folders)
