add_subdirectory(betterchain.system)
add_subdirectory(currency)
#add_subdirectory(bancor)
#add_subdirectory(betterchain.system)
add_subdirectory(asserter)
#add_subdirectory(exchange)
#add_subdirectory(infinite)
add_subdirectory(proxy)
add_subdirectory(test_api)
#add_subdirectory(simpledb)
#add_subdirectory(storage)
#add_subdirectory(social)

install( DIRECTORY lib DESTINATION include/ )
install( DIRECTORY skeleton DESTINATION share/ )
